notes/grammar.txt
program
    = ?packageStatement *programStatement

packageStatement
    = ?"pub" "package" identifier *("." identifier) ?("." "*") lineEnd

programStatement
    = ?"pub" (variableDefinition | functionDefinition | structDefinition)

variableDefinition
    = ?"inline" "var" identifier (type ?("=" expression) | "=" expression) lineEnd

functionDefinition
    = ?"inline" "func" functionName "(" *(functionArgument ",") ?functionArgument ")" ?type ("=" expression | block)

functionName
    = identifier | "make" | "new" | "drop" | "share" | ...

functionArgument
    = identifier (type ?("=" expression) | "=" expression)

structDefinition
    = ?"inline" "struct" identifier (("=" expresion) | "{" *(structMember lineEnd) "}")
      ?("cases" "{" ?("default" structCase lineEnd) *(structCase lineEnd) "}")

structCase
    = identifier ?("=" expression)
    | structDefinition

structMember
    = ?"pub" identifier type
    | type

block
    = "{" *blockStatement "}"

blockStatement
    = ?"static" variableDefinition
    | functionDefinition
    | structDefinition
    | block
    | ifStatement
    | switchStatement
    | whileLoop
    | doWhileLoop
    | forLoop
    | returnStatement
    | breakStatement
    | continueStatement
    | passStatement
    | expression

type
    = functionType
    | tupleType
    | arrayType
    | pointerType
    | constType
    | mutType
    | basicType

functionType
    = "func" tupleType ?type

tupleType
    = "(" *(type ",") ?type ")"

arrayType
    = "[" ?expression "]" type

pointerType
    = *("strong" | "weak" | "raw" | "static") "&" type

constType
    = "const" type

mutType
    = "mut" type

basicType
    = identifier *("." identifier)
